# parallel_armadillo

./: CMakeLists.txt  README.md  parallel_armadillo.cpp
docs/: diagonalization times.txt
src/: CMakeLists.txt  parallel_armadillo.cpp
